# android-ai-agent

./: .gitignore  BUILD.md  Cargo.toml  GEMINI.md  TEST_MATRIX.md  build.gradle.kts  gradlew  keystore.properties  keystore.properties.example  settings.gradle.kts
.Jules/: palette.md
.cargo/: config.toml
.jules/: bolt.md  sentinel.md
android-ai-agent-migration/: 2026-05-01-android-ai-agent-phase1-core.md  2026-05-01-android-ai-agent-phase2-safety-loop.md  2026-05-01-android-ai-agent-phase3-jni-integration.md  2026-05-02-android-ai-agent-phase4-compose-ui.md  2026-05-02-android-ai-agent-phase5-notifications-overlay.md  README.md  SOUL.md  facts.json
android-ai-agent-migration/skills/: SKILL.md
app/: build.gradle.kts  proguard-rules.pro  release.keystore
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
examples/: agent_loop_smoke.rs  gateway.rs  smoke_test.rs
kotlin/: AgentAccessibilityService.kt  AgentViewModel.kt  KeystoreManager.kt  build.gradle.kts  settings.gradle.kts
rust/: Cargo.toml
src/: agent_loop.rs  budget_tracker.rs  chat_models.rs  complexity_classifier.rs  context_manager.rs  gateway_server.rs  http_client.rs  identity.rs  jni_exports.rs  lib.rs  linux_sandbox.rs  linux_tools.rs  memory_manager.rs  model_pricing.rs  model_router.rs  prompt_cache.rs  skill_registry.rs  soul.rs  tool_parser.rs  unified_agent.rs  user_model_config.rs  web_prefetch.rs
src/events/: agent_events.rs  mod.rs
src/memory/: chat_store.rs  compactor.rs  deduplicator.rs  fact_index.rs  fact_store.rs  injector.rs  mod.rs  pre_fetcher.rs
(+80 files in other folders)
