[package]
name = "android-ai-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "agent_core"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.140"
serde_yaml = "0.9"
toml = "1.1"
thiserror = "2"
tokio-tungstenite = "0.26"
futures-util = "0.3"
rusqlite = { version = "0.39.0", features = ["bundled", "functions"] }
regex = "1.12.3"
sha2 = "0.11.0"

[[example]]
name = "smoke_test"
path = "examples/smoke_test.rs"

[[example]]
name = "agent_loop_smoke"
path = "examples/agent_loop_smoke.rs"

[[example]]
name = "gateway"
path = "examples/gateway.rs"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22", default-features = false }
